--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,18 @@ spring.application.name=meuprimeiroprojeto
 server.port=8081
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
+# Configura o banco H2 em memória
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Criação automática de tabelas
+spring.jpa.hibernate.ddl-auto=update
+
+# Exibir comandos SQL no console
+spring.jpa.show-sql=true
+
+# Ativar console web do H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
