--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=meuprimeiroprojeto
-server.port=8081
+server.port=8080
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
 # Configura o banco H2 em memória
@@ -17,3 +17,5 @@ spring.jpa.show-sql=true
 # Ativar console web do H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+logging.level.<your-package-name>=DEBUG
